--- a/resources/css/header.css
+++ b/resources/css/header.css
@@ -9,7 +9,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  background-color:  #38a1db;
+  background-color:  #6495ed;
   height: 70px;
 }
 
