--- a/resources/css/evaluation_sheet.css
+++ b/resources/css/evaluation_sheet.css
@@ -72,3 +72,9 @@ hr {
 .record {
     color: gray;
 }
+
+.policy-text {
+    background-color: #F2F2F2;
+    border-radius: 5px;
+    padding: 5px 15px;
+}
