--- a/resources/css/sidebar.css
+++ b/resources/css/sidebar.css
@@ -49,6 +49,12 @@ ol li:nth-child(4) {
 
 }
 
+ol li:nth-child(5) {
+    border-left: solid 6px #f075e1;
+    background: #f1f8ff;/*背景色*/
+
+}
+
 ol li:first-child:hover {
     color: #fff;
     border-left: solid 6px #fcc203;/*左側の線*/
